2002-03-24  Adam Fedor  <fedor@gnu.org>

	* Source/NSStringDrawing.m (drawRun): Use new unicode functions
	for string conversion (patch from yjchen@ms7.url.com.tw).

Mon Mar 25 00:12:05 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.m ([-setNeedsDisplayForLineRange:inTextContainer:]): 
	Fixed typo introduced by me in last change (reported by Alexander
	Malmberg).
	
2002-03-23  Adam Fedor  <fedor@gnu.org>

	* Version: 0.7.6

Sat Mar 23 21:49:10 2002  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOutlineView.m: Minor cleanup.   Removed some unecessary
	NSLog statements.

Sat Mar 23 11:34:10 2002  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Headers/gnustep/gui/NSOutlineView.h: Added dictionary to speed
	up generation of the _items list.  Also, this keeps the outline view
	from being updated without an explicit call to reloadData.

	* Source/NSOutlineView.m: Implemented -[NSOutlineView reloadItem:]
	and -[NSOutlineView reloadItem:reloadChildren:] and improved
	-[NSOutlineView reloadData]

Fri Mar 22 13:09:03 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/NSRulerView.h: Merged new code from Diego
	Kreutz (kreutz@inf.ufsm.br).
	* Source/NSRulerView.m: Class contributed by Diego Kreutz
	(kreutz@inf.ufsm.br).  I did some minor changes.
	
Fri Mar 22 11:40:44 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Model/IMLoading.m: Include AppKit/NSNibLoading.h for
	awakeFromNib.

Fri Mar 22 11:35:20 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.m ([GSSimpleLayoutManager
	-setNeedsDisplayForLineRange:inTextContainer:]): Check that the
	whole range of lines, not just the first one, is in the range we
	know about (Suggestion from Alexander Malmberg).

2002-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/exampleInfo.plist: Fix illegal character in plist ...
	use unicode escape.  Bug reported by Yen-Ju Chen

2002-03-22  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
