@@ -1,3 +1,9 @@
+Tue Mar 26 14:33:24 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* Source/GSTable.m: Removed GSTransparentView and replaced it with
+	a simple NSView.
+	* Headers/gnustep/gui/GSTable.h: Idem.
+	
 2002-03-24  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSStringDrawing.m (drawRun): Use new unicode functions
